Revise homepage content and title for clarity

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,46 +1,77 @@
 ---
-title: Homepage example
-description: This is a homapage example for a Canopy IIIF project template.
-image: https://iiif.dc.library.northwestern.edu/iiif/3/138a94b0-175a-4152-98c7-df58661ce7d5/950,520,7100,4740/!1200,630/0/default.jpg
+title: Eben Horsford’s Later Work and the Context of Eugenic Theory in Academia
+referencedManifests: 
+- https://sites.dlib.nyu.edu/viewer/api/presentation/photos/fales_mss208_cuid1709/manifest.json
 ---
+ 
+# Eben Horsford’s Later Work and the Context of Eugenic Theory in Academia
 
-<Interstitials.Hero
-  headline="Use this Canopy IIIF template to create a new digital project"
-  description="This starter is yours to configure, add context to, and publish a collection that fits your project."
-  background="theme"
-  random={true}
-  links={[
-    {
-      href: "/about/get-started",
-      title: "Get Started",
-      type: "primary",
-    },
-    {
-      href: "https://canopy-iiif.github.io/app/docs/",
-      title: "Read documentation",
-      type: "secondary",
-    },
-  ]}
-/>
+*Brenna Moran*
 
-<Container>
+Eben A. Horsford was a chemist, businessman, and Harvard professor known most for patenting double-acting baking soda in 1850 and co-founding Rumford Chemical Works. In 1847, Horsford married Mary L’Hommedieu Gardiner and later, after Mary died in 1855, married her sister Phoebe Dayton Gardiner. By the 1880s, Horsford was retired and shifted his attention elsewhere—to history, linguistics, and archeology. In 1887, he transcribed and published Zeisberger’s *Indian Dictionary*. Simultaneously, he began conducting research about Leif Erikson’s 1000 CE settlement in the Americas, Vinland, publishing two books on the subject by the end of the decade. Horsford's late in life production of scholarship in the social sciences was occurring simultaneously as theories of eugenics were gaining legitimacy amongst academics. Furthermore, his ability to publish on subjects in which he had no formal experience speaks more to his connections and access to resources than the quality of his work. 
 
-## Getting started
+Beginning in the mid-nineteenth century, Charles Darwin’s theory of evolution by natural selection, published in *The Origin of Species* gave rise to "research" that produced the racist and pseudoscientific theory that is now known as eugenics. By the 1860s, Francis Galton, cousin of Darwin, began asking how the theory of evolution from natural selection applies to humans. By 1883, Galton published *Inquiries into Human Faculty and its Development*, coining the term "eugenics."[^1] Though we cannot be certain to what degree Horsford engaged directly with eugenic theory, it is clear that he was aware of Darwin’s theory of evolution and engaged in dialogues that included overtly eugenic language.[^2] So while the work Horsford produced related to social sciences did not directly speak to eugenic theory, it is essential to understand his work within this context because it was informed by the same racist beliefs that allowed eugenic theory to exist and spread as it did within academia.
 
-Canopy IIIF is an open-source static site generator designed for IIIF collections. This template is ready for your collection, context, and publishing.
+Horsford’s first published work in the realm of social sciences was Ziesberger’s *Indian Dictionary*. David Zeisberger was a Moravian missionary who worked with Indigenous peoples in the United States from the 1740s until his death in 1808. During this time, he worked extensively to translate both Onondaga (Iroquois) and Delaware (Algonquin) words and phrases into English and German. Zeisberger died before he could publish the translations, and his notes and manuscript came to be held by the Harvard College Library. It is there that his drafts were found by Horsford, who decided to take on the work of publishing Zeisberger’s manuscript despite the fact that he had no formal expertise in linguistics or anthropology. It is likely that Horsford’s personal history of having been raised by a missionary father informed him feeling qualified to take on the project. 
 
-### Point to your collection
+The way Horsford writes about *Indian Dictionary* makes clear that he had bought into the myth of the "vanishing Indian." As he was publishing *Indian Dictionary*, Indigenous peoples in the The United States were facing the deathly effects of Americans' colonial impulse to expand westward. Yet, in the preface of *Indian Dictionary* (the only part of the book Horsford written with Horford’s voice) he displays a great reverence for Zeisberger’s work and the preservation of Indigenous languages, but never the Indigenous people themselves. This was a common sentiment amongst white Americans in the late nineteenth century, as many had bought into the myth of the "vanishing Indian," defined as "the idea that racial hardwiring doomed savage tribes to disappear when confronted with white civilization."[^3] He writes, "my supreme wish was to render it impossible that precious result of the labor of a lifetime, in the midst of the rarest opportunities, — impossible to ever again occur, should by any accident hereafter be lost."[^4] Horsford’s choice to emphasize how rare he believed Ziesberger’s opportunity to be displays how he too had bought into the myth. Operating under that belief, *Indian Dictionary* functions to preserve Indigenous languages for the use and enjoyment of non-Indigenous people, under the assumption that the languages’ speakers would soon be gone. Considering the myth of the vanishing Indian and eugenic theory side by side, they are incredibly similar in that both are rooted in the assumption that white people are naturally superior to non-white people. 
 
-- Open `canopy.yml` and set `collection` to the IIIF Collection you want to feature.
-- Review `metadata` and `featured` entries—adjust them to suit the facets and works you want to highlight.
+Around the same time that Horsford was working on publishing Ziesberger’s Indian Dictionary, he began researching the theory that Norse explorer Leif Erikson’s North American settlement from the year 1000 CE was located in Boston, Massachusetts.[^5] He set out on proving this theory by conducting archaeological digs about a mile from his home. After discovering the foundation of a stone house from the American colonial period he publicly claimed it to be the former home of Erikson, despite ample evidence suggesting otherwise.[^6] To celebrate discovering "proof" of the theory, Horsford paid for the erection of a statue of Leif Erikson in Boston, with the inscription "On this spot in the year 1000 Leif Erikson built his house in Vineland."[^7] Horsford had no formal training in history or archeology, but by commissioning the statue he was able to stamp his beliefs onto the landscape of Boston. 
 
-### Tune layouts and pages
+Soon after the statue was erected, Horsford published the address he gave at its unveiling, titled *Discovery of America by Northmen: Address at the Unveiling of the Statue of Leif Eriksen*. The conclusions drawn by Horsford in *Discovery of America by Northmen* were criticised almost to the point of mockery by scholars and the Massachusetts Historical Society alike.[^8] Despite this, Horsford only dug his heels in deeper, publishing *The Problem of the Northmen* in response in 1889.[^9]
 
-- Customize `content/index.mdx`, `content/about/`, and add new folders under `content/` for exhibits or guides.
-- Modify `content/works/_layout.mdx` to control how individual manifests render.
-- Update `content/_app.mdx` to adjust site-wide structure.
-- Browse the component catalog and usage patterns in the docs to extend the narrative beyond default manifests.
+Horsford’s commitment to proving that Vinland existed in modern day Boston is not only remarkable for its poor scholarship. By the 1880s, significant amounts of Irish Catholic people and Italian people were immigrating to Boston. Despite anti-immigrant and anti-Catholic sentiments, Irish Catholics in particular were gaining political and social power, with the first Catholic mayor of Boston elected in 1884. To both of these groups, Christopher Columbus served as an important symbol of their belonging as Americans.[^10] For Horsford to then assert that Erikson discovered the American continent centuries before Columbus was to call into question Colombus’s value as an American symbol, claiming instead that Americans should be celebrating Erikson, a Nordic Christian. 
 
-<RelatedItems top={3} />
+In the context of the rise of eugenic theory, Erikson’s Nordic ancestry was of great significance, as many scholars were asserting that Nordic people were racially superior.[^11] And other academics that encountered Horsford’s claims were aware of this. In a letter to Horsford regarding his "discoveries", Judge Charles Patrick Daly, then president of the American Geographical Society, wrote, "We have hitherto but inadequately appreciated the Northmen as a race… the primitive home of the Aryans… was some place in the south eastern part of Scandinavia, which would make the Northmen the progenitors of the Greeks, the Romans, and, with the exception of one or two races, all of the nations of modern Europe; which, if further researches should establish to be fact, would make them the greatest race in the history of mankind."[^12]
 
-</Container>
+Beginning in the 1850s, the term "aryan" began to be used to describe a broader "white race" that was believed to be superior to all other non-aryans.[^13] By marking Erikson as Aryan, Daly is both claiming that Erikson was racially superior to others, including Columbus, and claiming him as a sort of ancestor to all "Aryan" people. Horsford’s interest in placing Erikson in Boston, both historically and physically with the erection of the statue, represented much more than his interest conducting anthropological and historical research. His claim that Erikson established Vinland in modern day Boston in the year 1000 CE works to supplant Columbus as the discoverer of the American continent and uphold the believed superiority of white, Christian European descendants. 
+
+Horsford’s work in the fields of linguistics, history, and anthropology were never explicitly centered around the topic of eugenics, yet each of his works in these fields exemplify that they were produced within the academic milieu that was also embracing the rise of eugenic theory. In both the case of *Zeisberger’s Indian Dictionary* and his work placing Leif Erikson in Boston, Horsford’s scholarship works to benefit white Christians in America. That Horsford was able to achieve some success as a scholar in the social sciences with no formal training speaks to the access available to the wealthy and well connected within academia in the late nineteenth century.
+
+However, though many people held Horsford’s discoveries as truth, this was not universally true. For example, in 1887 scholar Justin Windsor wrote that Horsford presented "The most incautious linguistic inferences, and the most uncritical cartographical perversions."[^14] In response to the critics of his work, Horsford published The Problem of the Northmen in 1889 to further defend his conclusions. Of this work, historian Julius E.Olson wrote that "Mr. Horsford is dogmatic, and [his] acquaintance with the literature of the subject is superficial."[^15] Horsford’s capacity to publish so extensively on this subject at the end of his life speaks less to his actual skill as a historian or archaeologist than to his proximity to academia and access to capital. 
+
+The myth of the vanishing Indian fits into a larger pattern of "dying race" theories that were popular amongst anthropologists during this time. With that, scholar Patrick Brantlinger claims that there was a "crescendo" of interest in dying races, like white Americans believed Native Americans to be.[^16] Charles Darwin even wrote in [TITLE], "at present day civilized nations are supplanting barbarous nations," speaking with a tone of inevitability. Operating under the eugenic belief in natural selection as applied to humans, America’s westward expansion and the subsequent declining population of Native Americans was a net positive for humanity. 
+
+To claim then, that Leif Erikson arrived on the American continent centuries before Columbus was to call into question Columbus’s significance. Of Horsford’s claims Judge Charles Patrick Daly, president of the American Geographical Society, wrote, "It is especially interesting at this period, when we are preparing to celebrate the four hundredth anniversary of the discovery of the continent by Columbus, that the facts you have ascertained should be brought to light in connection with this early discovery of America." Upon believing that Erikson arrived at Boston in 1000 CE, Daly was quick to consider Erikson’s discovery as worthy to consider when celebrating Columbus. [Horsford’s claims, when believed, had implications for white supremacy shit]
+
+"We have hitherto but inadequately appreciated the Northmen as a race… Prof. A. H. Sayce, the learned Assyrian scholar, in a recent paper has declared… his beliefs that the primitive home of the Aryans… was some place in the south eastern part of Scandinavia, which would make the Northmen the progenitors of the Greeks, the Romans, and, with the exception of one or two races, all of the nations of modern Europe; which, if further researches should establish to be fact, would make them the greatest race in the history of mankind."[^17]
+
+[^1]: Robert Jarvenpa, Declared Defective: Native Americans, Eugenics, and the Myth of Nam Hollow, (University of Nebraska Press, 2018), page 38; Diane B. Paul and James Moore, "The Darwinian Context: Evolution and Inheritance", Alison Bashford, and Philippa Levine (eds), The Oxford Handbook of the History of Eugenics, Oxford Handbooks (2010; online edn, Oxford Academic, 18 Sept. 2012). 
+
+[^2]: Cite that conversatio with that one mfer that was like all happy abt leif for eugenic reasons, also cite that letter from that mfer requesting the books abt aryans etc
+
+[^3]: Ari Kelman, "The Myth of the Vanishing Indian: A Fierce Argument in Defence of Indigenous American Cultures," (Times Literary Supplement, no. 6066, 2019), 12. 
+
+[^4]: Eben Horsford, Zeisberger’s Indian Dictionary (American Theological Library Association Historical Monographs Collection, 1887), iv.
+
+[^5]: It is now known that the accurate location of Vinland was in Newfoundland, Canada, about 1,000 miles north of Boston; Eben Norton Horsford and E. H Clement, The discovery of the ancient city of Norumbega. A communication to the president and council of the American Geographical Society at their special session in Watertown, (Boston and New York, Houghton, Mifflin, 1890), 10.
+
+[^6]: Torgrim Sneve Guttormsen, "Valuing Immigrant Memories as Common Heritage: The Leif Erikson Monument in Boston." (History and Memory: Studies in Representation of the Past 30, no. 2, 2018). 
+
+[^7]: Edgar B. Herwick III, "Why Is There A Statue of Leif Erikson On Commonwealth Avenue?," GBH News, 2019.
+
+[^8]: Julius Olson, "Review of The Problem of the Northmen and the Site of Norumbega by Professor Olson ... and a Reply by Eben Norton Horsford," (1890): 3–22, 3; L. Mara Dodge, "The Viking Saga Continued: Leif Erikson, Anne Whitney, Boston, and the Nation," (Historical Journal of Massachusetts 49, no. 2, 2021). 
+
+[^9]: Olson, "Review," 6.
+
+[^10]: Whitney’s Leif Eriksson page 42; Page 51 and 52 of Whitney’s Leif 
+
+[^11]: NAs and eugenics page 38
+
+[^12]: site
+
+[^13]: Britannica School, s.v. "Aryan," accessed July 31, 2025, https://school-eb-com.proxy.library.nyu.edu/levels/high/article/Aryan/9750.
+
+[^14]: Review page 3 https://babel.hathitrust.org/cgi/pt?id=hvd.32044022668933&seq=1
+
+[^15]: Review page 6
+
+[^16]: Levine, Philippa, ' Anthropology, Colonialism, and Eugenics', in Alison Bashford, and Philippa Levine (eds), The Oxford Handbook of the History of Eugenics, Oxford Handbooks (2010; online edn, Oxford Academic, 18 Sept. 2012), https://doi-org.proxy.library.nyu.edu/10.1093/oxfordhb/9780195373141.013.0003, accessed 24 July 2025.
+
+[^17]: site
+
+<Viewer iiifContent="https://stage-sites.dlib.nyu.edu/viewer/api/presentation/photos/fales_mss208_cuid1709/manifest.json" />
+
+## Referenced Items
+  
+<ReferencedItems />
